# ANN

./: CMakeLists.txt
classes/: Model.hxx  Model_impl.hxx
classes/datasets/: dataset.hxx
classes/helpers/: visitors.hxx
classes/layers/: convolution.hxx  convolution_impl.hxx  linear.hxx  linear_impl.hxx  max_pool.hxx  max_pool_impl.hxx  mean_pool.hxx  mean_pool_impl.hxx  softmax.hxx
classes/lin_alg/: mat.hxx  mat_impl.hxx  vector.hxx  vector_impl.hxx
classes/loss functions/: cross_entropy.hxx
classes/optimizers/: SGD.hxx  momentum.hxx
mnist/: read_mnist.cpp  read_mnist.hxx  read_mnist_impl.cpp
testing/: convolution_test.cpp  model_test.cpp  readmnist_test.cpp
